添加日志定时清除

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 #打印详细的测试结果
-addopts = -vs --alluredir ./temp --clean-alluredir
+addopts =-vs --alluredir ./temp --clean-alluredir
 ;默认运行当前目录下的文件
 #testpath = ./TestCases
 #默认运行文件以test开头
@@ -11,3 +11,5 @@ python_files = test_*.py
 python_functions = test_*
 #冒烟用例
 markers = smoke:maoyan
+# 添加自定义配置项 log_file_expiry_seconds，用于设置日志文件过期时间（以秒为单位）
+
