--- a/data/template.yml
+++ b/data/template.yml
@@ -7,7 +7,7 @@ collection:
     data:
       userName: zqj
       pwd: 123456
-      code: ${admin_user_15881086121}
+      code: 123456
       type: 0
   validate:
     - equals: {code: 0}
