common新增ReadFile、AssertUtil，新增文件core

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,10 @@
 [pytest]
 #打印详细的测试结果
-addopts =-vs --alluredir ./temp --clean-alluredir
+addopts = -vs --alluredir ./reports/allure-temp --clean-alluredir
 ;默认运行当前目录下的文件
-#testpath = ./TestCases
+testpaths = ./TestCases
 #默认运行文件以test开头
-python_files = test_*.py
+;python_files = test_*.py
 #默认运行类以test开头
 #python_class = test_*
 #默认运行以test开头的方法
