--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-requests
-pytest
+requests~=2.31.0
+pytest~=7.4.2
 pytest-html
 pytest-xdist
 pytest-ordering
 pytest-rerunfailures
 allure-pytest
 pytest-redis
-jsonpath
-PyYAML
+jsonpath~=0.82.2
+PyYAML~=6.0.1
 pytest-logger
 pytest-ini
+
+urllib3~=2.0.6
+redis~=5.0.1
