--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [redis]
 host = r-2vcozz1pz3g5jix83q.redis.cn-chengdu.rds.aliyuncs.com
-password = r-2vcozz1pz3g5jix83q.redis.cn-chengdu.rds.aliyuncs.com
+password = asfa!@#!*&1saf8B
 port = 6379
 db = 8
 key = 215881086122
