--- a/data/case_data.yml
+++ b/data/case_data.yml
@@ -3,7 +3,7 @@ login:
   requests:
     method: get
     headers: {'Content-Type':'application/json','Client':'member'}
-    url: https://asgsaswec.qyfriend.com/api/socialize/login/getCode?type=2&mobile=15881086122
+    url: https://asgsaswec.qyfriend.com/api/socialize/login/getCode?type=1&mobile=15881086122
     data:
   validate:
     - equals: {code: 0}
@@ -12,7 +12,7 @@ code_token:
 - name: 提交验证码
   requests:
     method: get
-    url: https://asgsaswec.qyfriend.com/api/socialize/login/loginTalent?code=${code_value}&mobile=15881086122
+    url: https://asgsaswec.qyfriend.com/api/socialize/login/loginMember?code=${code}&mobile=15881086122
     headers: {'Content-Type':'application/json','Client':'member'}
     data:
   validate:
