--- a/data/case_data.yml
+++ b/data/case_data.yml
@@ -2,7 +2,9 @@ login:
 - name: 登录账号密码
   requests:
     method: get
-    headers: {'Content-Type':'application/json','Client':'member'}
+    headers:
+      Content-Type: application/json
+      Client: member
     url: https://asgsaswec.qyfriend.com/api/socialize/login/getCode?type=1&mobile=15881086122
     data:
   validate:
@@ -13,467 +15,22 @@ code_token:
   requests:
     method: get
     url: https://asgsaswec.qyfriend.com/api/socialize/login/loginMember?code=${code}&mobile=15881086122
-    headers: {'Content-Type':'application/json','Client':'member'}
+    headers:
+      Content-Type: application/json
+      Client: member
     data:
   validate:
     - equals: {code: 0}
 
 nft:
-- name: 创建藏品
+- name: 首页
   requests:
-    method: post
-    url: http://higher8pre.douxiangapp.com/dboxAdmin/v1/nft
+    method: get
+    url: https://asgsaswec.qyfriend.com/api/socialize/sysBanner/listBanner?type=1
     headers:
       Content-Type: application/json
+      Client: member
       Authorization: ${token}
     data:
-      supplementaryType: 1
-      mainImageDisplay: 0
-      nftType: 1
-      isOnline: 0
-      canBuy: 1
-      numRandom: 1
-      openSend: false
-      sendCloseTime: 0
-      sort: 0
-      title: 自动化测试
-      description: ''
-      mainImg: >-
-        https://xiangboboimg.oss-cn-beijing.aliyuncs.com//backstage/img/nft/1694412302291.jpg_720x720q90g.jpg
-      displayImgs:
-        - >-
-          https://xiangboboimg.oss-cn-beijing.aliyuncs.com//backstage/img/nft/1694412304739.jpg_720x720q90g.jpg
-      authorHeadimg: 'https://dboximg.douxiangapp.com/nftProd/img/nft/1672022615423.png'
-      authorId: 15
-      authorName: 龙之岛DOD
-      publishId: 5
-      publishHeadimg: 'https://dboximg.douxiangapp.com/nftProd/img/nft/1672021311005.png'
-      publishName: 龙之岛DOD
-      detailImgs:
-        - >-
-          https://xiangboboimg.oss-cn-beijing.aliyuncs.com/backstage/video/20230911/20230911140507_ltvv.png
-      tags:
-        - 测试标签
-      price: 0.01
-      firstStock: ''
-      stock: 100
-      limitStock: 2
-      publishTime: '2023-09-11 14:06:21'
-      categories:
-        - - categoryId: '707'
-            level: 1
-            name: 其他
-          - categoryId: '708'
-            level: 2
-            name: 其他
-      openSell: true
-      sellCloseDay: 0
-      isPriorityBuy: 0
-      priorityDate: ''
-      priorityTimes: ''
-      isGiveGift: 0
-      giftType: 1
-      showType: 1
-      giftId: ''
-      distribution: 1
-      distributionProportion: ''
-      holdPictures: []
-      isOpen: 0
-      extraStock: 9999
-      lowerShelfCooling: 1
-      openExclusiveBuy: 0
-      sellForbidden: 0
-      firstGetInterdiction: 0
-      marketGetInterdiction: 0
-      resellFixedPriceStatus: 0
-      fixedPriceBasis: 0
-      calculationFormula: 0
-      publishEndTime: '2130-01-01 00:00:00'
-      displayLevel: 1
-      limitUser: 0
-      displayStock: 9999
-      branchWarehouse: 2
-      ordinaryRepertory: 999
-      limitBrush: 1
-      timesMode: 1
-      openDiscount: 1
-      discountMode: 1
-      nftRepertorySeparationVo: {}
-      levelId: 0
-      nftAttrs: []
-      chainSeriesDTO:
-        chainUnitDTOS: []
-        templateImg: ''
-        raceId: ''
-      limitRule: []
-      limitType: 1
-      exchangeTimeOpen: 0
-      prizeGiftList: []
-      integral:
-        - integralType: 2
-          isShow: false
-          name: 电池配置
-        - integralType: 3
-          isShow: false
-          name: 砖块配置
-        - integralType: 4
-          isShow: false
-          name: 龙精配置
-        - integralType: 5
-          isShow: false
-          name: 金蛋配置
-        - integralType: 6
-          isShow: false
-          name: 龙珠配置
-        - integralType: 7
-          isShow: false
-          name: 龙核配置
-        - integralType: 8
-          isShow: false
-          name: 龙鳞配置
-        - integralType: 9
-          isShow: false
-          name: 龙血配置
-        - integralType: 10
-          isShow: false
-          name: 龙晶配置
-        - integralType: 11
-          isShow: false
-          name: 渣渣辉配置
-        - integralType: 12
-          isShow: false
-          name: 星石配置
-        - integralType: 13
-          isShow: false
-          name: 材料12配置
-        - integralType: 14
-          isShow: false
-          name: 材料13配置
-        - integralType: 15
-          isShow: false
-          name: 材料14配置
-      nftProductionDisposition:
-        - consumePropertyFee: 0
-          productMaterials: 1
-          currency: 1
-          orderNum: 1
-      nftPowerConfig: {}
-      nftPlunderDisposition:
-        durabilityLimit2: 0
-        durabilityLimit: 0
-        energy: 0
-        physicalPowerScore: 0
-        lifeScore: 0
-      nftAttrConfig:
-        attrType: 6
-        conversionScale: 10
-        nftAttrConfigCostBOS: []
-      lifeMode: 1
-      consumeMode: 1
   validate:
-    - equals: {code: 1}
-
-- name: 编辑藏品
-  requests:
-    method: PUT
-    url: http://higher8pre.douxiangapp.com/dboxAdmin/v1/nft/10000175
-    headers:
-      Content-Type: application/json
-      Authorization: ${token}
-    data:
-      id: '10000175'
-      title: 编辑自动化测试
-      selfCode: null
-      description: ''
-      mainImg: >-
-        https://xiangboboimg.oss-cn-beijing.aliyuncs.com//backstage/img/nft/1694412302291.jpg_720x720q90g.jpg
-      displayImgs:
-        - >-
-          https://xiangboboimg.oss-cn-beijing.aliyuncs.com//backstage/img/nft/1694412304739.jpg_720x720q90g.jpg
-      authorId: 16
-      authorName: 中传云创（成都）文化发展有限公司
-      authorHeadimg: >-
-        https://dboximg.douxiangapp.com/nftProd/img/nft/1660735513767.png_720x720q90g.jpg
-      publishId: 6
-      publishName: 爱尔文(天津)文化科技有限公司
-      publishHeadimg: 'https://dboximg.douxiangapp.com/nftProd/img/nft/1660735850427.jpg'
-      detailImgs:
-        - >-
-          https://xiangboboimg.oss-cn-beijing.aliyuncs.com/backstage/video/20230911/20230911140507_ltvv.png
-        - >-
-          https://xiangboboimg.oss-cn-beijing.aliyuncs.com/backstage/video/20230911/20230911162426_czvy.png
-        - >-
-          https://xiangboboimg.oss-cn-beijing.aliyuncs.com/backstage/video/20230911/20230911162429_gfko.png
-        - >-
-          https://xiangboboimg.oss-cn-beijing.aliyuncs.com/backstage/video/20230911/20230911162431_bfue.png
-        - >-
-          https://xiangboboimg.oss-cn-beijing.aliyuncs.com/backstage/video/20230911/20230911162433_gth9.png
-      price: 0.01
-      stock: 100
-      limitStock: 2
-      publishTime: '2023-09-11 14:06:21'
-      sort: 0
-      tags:
-        - 测试标签
-        - 编辑标签
-      categories:
-        - - createTime: '2023-09-11 15:36:08'
-            id: 59146
-            nftId: '10000175'
-            categoryId: '707'
-            name: 其他
-            level: 1
-            groupId: 1
-          - createTime: '2023-09-11 15:36:08'
-            id: 59147
-            nftId: '10000175'
-            categoryId: '708'
-            name: 其他
-            level: 2
-            groupId: 1
-      isOnline: 0
-      saledNum: 0
-      openSell: true
-      sellCloseDay: 0
-      openSend: false
-      sendCloseDay: 0
-      showType: 1
-      zipName: null
-      canBuy: 1
-      marketingRightsCard: null
-      isGiveGift: 0
-      rightsCardId: null
-      giftType: 1
-      giftId: null
-      isPriorityBuy: 0
-      priorityTimes: null
-      priorityDate: null
-      distribution: 1
-      distributionProportion: null
-      numRandom: 1
-      extraStock: 9999
-      limitUser: 0
-      surplusStock: 10099
-      firstStock: 100
-      firstExtraStock: 9999
-      displayStock: 9998
-      initialStock: 10099
-      lowerShelfCooling: 1
-      shelfTime: null
-      blockChain: 0
-      openExclusiveBuy: 0
-      nftExclusiveBuyDTOS: []
-      marketStatus: null
-      serviceRate: 0
-      marketMaintainStatus: false
-      marketMaintainStart: null
-      marketMaintainEnd: null
-      resellFixedPriceStatus: 0
-      fixedPriceBasis: 0
-      calculationFormula: 0
-      minFixedPrice: 0
-      maxFixedPrice: 0
-      dataClear: false
-      resellInterdiction: false
-      dayExemptFrequency: null
-      firstGetInterdiction: 0
-      marketGetInterdiction: 0
-      sellForbidden: 0
-      sendCloseTime: 0
-      publishEndTime: '2130-01-01 00:00:00'
-      isOpen: 0
-      holdLimitStock: 0
-      limitBrush: 1
-      timesMode: 1
-      openDiscount: 1
-      discountMode: 1
-      holdPictures: []
-      nftRepertorySeparationVo:
-        ordinaryRepertory: null
-        pictureRepertory: null
-        exclusiveRepertory: null
-        ordinaryCurrentRepertory: null
-        pictureCurrentRepertory: null
-        exclusiveCurrentRepertory: null
-        ordinaryRepertorySold: null
-        pictureRepertorySold: null
-        exclusiveRepertorySold: null
-        stockSold: '0'
-      branchWarehouse: 2
-      num: 0
-      isShow: 0
-      nftNumber: ''
-      levelId: 0
-      levelName: null
-      lifeMode: 1
-      isBind: 0
-      nftAttrs: null
-      holdCount: null
-      circulationNum: null
-      openPrivilege: false
-      displayPngImgs: null
-      unitImgs: ''
-      unitImgList: null
-      exchangeTimeOpen: 0
-      exchangeTime: 0
-      prizeGiftList: []
-      nftType: 1
-      numberOfHolders: 0
-      salesNum: 0
-      pages: null
-      chainSeriesDTO: null
-      displayLevel: 1
-      chainSeriesId: '0'
-      limitType: 1
-      limitRule: []
-      limitLevels:
-        - levelId: 1
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 2
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 3
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 4
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 5
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 6
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 1001
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 1002
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 1003
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 1004
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 1005
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 1006
-          isChoose: false
-          levelName: null
-          levelType: null
-        - levelId: 1007
-          isChoose: false
-          levelName: null
-          levelType: null
-      limitNfts: []
-      integral:
-        - createTime: null
-          id: null
-          prizeId: null
-          integralType: 2
-          isShow: false
-          grantNum: null
-          prizeTitle: null
-          prizeImg: null
-          prizeExtraStock: null
-        - createTime: null
-          id: null
-          prizeId: null
-          integralType: 3
-          isShow: false
-          grantNum: null
-          prizeTitle: null
-          prizeImg: null
-          prizeExtraStock: null
-        - createTime: null
-          id: null
-          prizeId: null
-          integralType: 4
-          isShow: false
-          grantNum: null
-          prizeTitle: null
-          prizeImg: null
-          prizeExtraStock: null
-        - createTime: null
-          id: null
-          prizeId: null
-          integralType: 5
-          isShow: false
-          grantNum: null
-          prizeTitle: null
-          prizeImg: null
-          prizeExtraStock: null
-        - createTime: null
-          id: null
-          prizeId: null
-          integralType: 6
-          isShow: false
-          grantNum: null
-          prizeTitle: null
-          prizeImg: null
-          prizeExtraStock: null
-      raceId: null
-      factionsId: null
-      compoundCoolingShow: 0
-      compoundCoolingTime: null
-      nftProductionDisposition:
-        - consumePropertyFee: 0
-          productMaterials: 1
-          orderNum: 1
-          isEnergy: false
-          isTili: false
-          isMagic: false
-          isNaijiu: false
-      mainImageDisplay: 0
-      supplementaryType: 1
-      nftPowerConfig: null
-      nftPlunderDisposition: null
-      consumeMode: 1
-      nftAttrConfig: null
-      islandsType: 0
-      recommend: null
-      ordinaryRepertory: null
-      pictureRepertory: null
-      exclusiveRepertory: null
-  validate:
-    - equals: {code: 1}
-
-- name: 上架10000175藏品
-  requests:
-    method: put
-    url: http://higher8pre.douxiangapp.com/dboxAdmin/v1/nft/updateIsOnline?isOnline=0
-    headers:
-      Content-Type: application/json
-      Authorization: ${token}
-    data:
-      ids:
-        - '10000175'
-  validate:
-    - equals: {code: 2}
-
-- name: 下架10000175藏品
-  requests:
-    method: put
-    url: http://higher8pre.douxiangapp.com/dboxAdmin/v1/nft/updateIsOnline?isOnline=1
-    headers:
-      Content-Type: application/json
-      Authorization: ${token}
-    data:
-      ids:
-        - '10000175'
-  validate:
-    - equals: {code: 2}
+    - equals: {code: 0}
