--- a/config.ini
+++ b/config.ini
@@ -4,3 +4,12 @@ password = asfa!@#!*&1saf8B
 port = 6379
 db = 8
 key = 115881086122
+
+[log]
+dirname = 'log'
+log_name = '{}.log'
+log_name_format = "%Y-%m-%d"
+log_level = logging.DEBUG
+log_format = '[%(asctime)s][%(filename)s %(lineno)d][%(levelname)s]: %(message)s'
+disable_logging = True
+expiration_hours = 48
