--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ password = asfa!@#!*&1saf8B
 port = 6379
 ;数据库
 db = 8
-;需要自定义修改想要获取手机验证码（前面第1位代表用户端+11位手机号）
+;需要自定义修改想要获取手机验证码（第1位代表用户端+11位手机号）
 key = 115881086122
 
 [log]
