--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ password = asfa!@#!*&1saf8B
 port = 6379
 ;数据库
 db = 8
-;需要自定义修改想要获取手机验证码
+;需要自定义修改想要获取redis手机验证码（切勿添加白名单手机号）
 key = 15881086122
 
 [log]
