--- a/config.ini
+++ b/config.ini
@@ -23,5 +23,5 @@ log_level = logging.INFO
 log_format = [%%(asctime)s][%%(filename)s %%(lineno)d][%%(levelname)s]: %%(message)s
 ; True开启日志，False关闭日志
 disable_logging = true
-; 设置日志过期时间自动清理（以小时为单位）
+; 设置过期时间（以小时为单位）
 expiration_hours = 48
