添加email邮箱通知

--- a/config/config.ini
+++ b/config/config.ini
@@ -25,3 +25,20 @@ log_format = [%%(asctime)s][%%(filename)s %%(lineno)d][%%(levelname)s]: %%(messa
 disable_logging = true
 ; 设置过期时间（以小时为单位）
 expiration_hours = 48
+
+[email]
+;smtp邮箱服务器地址
+smtp_server = smtp.qq.com
+;smtp邮箱账号
+smtp_username = 694578908@qq.com
+;smtp邮箱授权码
+smtp_password = jighqusafgejbced
+;smtp端口
+smtp_port = 465
+;收件人邮箱
+to_mail = 15881086121@163.com
+;发送人邮箱
+from_email = 694578908@qq.com
+;邮件标题
+subject = 社交用户端接口自动化Allure测试报告访问地址:https://dada-codetest-member.qyfriend.com
+send_enabled = false
