--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 #打印详细的测试结果
-addopts = -vs --alluredir ./reports/allure-temp --clean-alluredir
+addopts =
+    -vs
+    --alluredir=./reports/allure-temp
+    --clean-alluredir
 ;默认运行当前目录下的文件
 testpaths = ./TestCases
 #默认运行文件以test开头
