添加email邮箱通知

--- a/config/config.ini
+++ b/config/config.ini
@@ -42,4 +42,4 @@ from_email = 694578908@qq.com
 ;邮件标题
 subject = 社交用户端接口自动化Allure测试报告访问地址:https://dada-codetest-member.qyfriend.com
 ;是否发送邮件:True为发送，False为关闭
-send_enabled = false
+send_enabled = true
