添加修改html模块框架

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,8 @@ addopts =
     -vs
     --alluredir=./reports/allure-temp
     --clean-alluredir
+    --html=./reports/report.html
+    --self-contained-html
 ;默认运行当前目录下的文件
 testpaths = ./TestCases
 #默认运行文件以test开头
